{
    "name": "ShipInput",
    "maps": [
        {
            "name": "Ship",
            "id": "916acb1c-66b7-4a4b-bd80-bef56da4e3e7",
            "actions": [
                {
                    "name": "MoveForward",
                    "type": "Button",
                    "id": "21e27cf6-7353-4d23-8d55-95fc1ebde43c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "Button",
                    "id": "77719e56-3999-4bcf-bfc4-2dafaacf2186",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PrimiryShoot",
                    "type": "Button",
                    "id": "87b1d17e-15d5-43f4-b504-0483e1c1efbc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryShoot",
                    "type": "Button",
                    "id": "dff86f55-8add-4ab1-b016-e9bc6e8d985b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b19d90cf-56a4-4cd0-a3a3-26274af2b661",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "PrimiryShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "918cdaa0-a508-4b3f-a9cc-40bc881dc297",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "MoveForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Direction",
                    "id": "bf955a11-0587-4e0d-8418-07bab4db901f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d82fe37c-bea0-4597-b1a5-c81f600d4858",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8745cb8d-0f9c-47a4-80a8-0b1daebe4f45",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "61823de9-1f86-44c7-95b3-b0014797698f",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "SecondaryShoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}